updated api docs
